[ADD] Implement basic functionality of PUT request for backend discotunts
